--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DATABASE_URL=postgres://${DB_USER}:${DB_PASS}@localhost:5432/${DB_NAME}
 
 # Container settings
 CONTAINER_NAME=rust-api-db
+
+# API PORT
+PORT=3001
