--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4.43", features = ["serde"] }
 dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+sqids = "0.4.2"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
 tokio = { version = "1.49.0", features = ["full"] }
 uuid = { version = "1.20.0", features = ["serde", "v4"] }
