--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ sqids = "0.4.2"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
+tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 uuid = { version = "1.20.0", features = ["serde", "v4"] }
