--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+async-trait = "0.1.89"
 axum = "0.8.8"
 chrono = { version = "0.4.43", features = ["serde"] }
 dotenvy = "0.15.7"
+josekit = "0.10.3"
+jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs", "use_pem"], default-features = false }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 sqids = "0.4.2"
@@ -19,3 +22,4 @@ tower-http = { version = "0.6.8", features = ["trace", "request-id", "cors", "se
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 uuid = { version = "1.20.0", features = ["serde", "v4"] }
+
