feat: dpop validafication

--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ CONTAINER_NAME=rust-api-db
 # API PORT
 PORT=3001
 
+PUBLIC_BASE_URL=http://localhost:${PORT}
+
 # App environment (development | production)
 #APP_ENV=production
 APP_ENV=development
@@ -27,6 +29,11 @@ AUTH_ISSUER=https://takt.dev
 AUTH_AUDIENCE=api.example.com
 ACCESS_TOKEN_LEEWAY_SECONDS=60
 DPOP_REQUIRED=true
+DPOP_IAT_LEEWAY_SECONDS=60
+DPOP_MAX_AGE_SECONDS=300
+DPOP_REPLAY_TTL_SECONDS=300
+DPOP_REQUIRED_ATH=true
+DPOP_REQUIRE_NONCE=false
 
 # ACCESS JWT (EdDSA)
 # NOTE: put your Ed25519 public key PEM here. For multiline PEM in .env, use \n escapes.
