--- a/.env
+++ b/.env
@@ -6,11 +6,13 @@ DATABASE_URL=postgres://${DB_USER}:${DB_PASS}@localhost:5432/${DB_NAME}
 
 # Container settings
 CONTAINER_NAME=rust-api-db
+CACHE_CONTAINER_NAME=rust-api-cache
 
 # API PORT
 PORT=3001
 
 PUBLIC_BASE_URL=http://localhost:${PORT}
+VALKEY_URL=redis://localhost:6379
 
 # App environment (development | production)
 #APP_ENV=production
