--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ chrono = { version = "0.4.43", features = ["serde"] }
 dotenvy = "0.15.7"
 josekit = "0.10.3"
 jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs", "use_pem"], default-features = false }
+redis = { version = "1.0.3", features = ["aio", "connection-manager", "tokio-comp"], default-features = false }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 sha2 = "0.10.9"
