--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -11,6 +11,7 @@ dotenvy = "0.15.7"
 jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+sqlx = { workspace = true }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 tracing = "0.1.44"
