--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 sha2 = "0.10.9"
 sqids = "0.4.2"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
+sqlx = { workspace = true }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 tower = { version = "0.5.3", features = ["timeout"] }
@@ -26,4 +26,3 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 url = "2.5.8"
 uuid = { version = "1.20.0", features = ["serde", "v4"] }
-
