refactor: add workspace.dependencies

--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -4,16 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.8"
-base64 = "0.22.1"
+axum = { workspace = true }
+base64 = { workspace = true }
 chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
 dotenvy = "0.15.7"
 jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
+serde = { workspace = true }
+serde_json = { workspace = true }
 sqlx = { workspace = true }
-thiserror = "2.0.18"
-tokio = { version = "1.49.0", features = ["full"] }
-tracing = "0.1.44"
-tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
-uuid = { version = "1.20.0", features = ["v4", "serde"] }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+uuid = { workspace = true }
