--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum = "0.8.8"
 base64 = "0.22.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+sha2 = "0.10.9"
 sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
