--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -8,9 +8,12 @@ axum = { workspace = true }
 base64 = { workspace = true }
 chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
 dotenvy = "0.15.7"
+getrandom = "0.4.1"
+hex = "0.4.3"
 jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
